--- a/link-it.html
+++ b/link-it.html
@@ -1,44 +1,46 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Букмарклет &laquo;поделиться ссылкой&raquo;</title>
 </head>
 <body>
 <h1>Букмарклет &laquo;поделиться ссылкой&raquo;</h1>
-
 <!-- Версия для правильных браузеров -->
 <!--[if !IE]>-->
-<p>
-<a href="javascript:(function(){var D=document;var f=D.createElement('form');f.action='http://my.ya.ru/request_to_session.xml';f.method='post';(D.documentElement||D.body).appendChild(f);f.style.display='none';f.innerHTML='<input name=body><input name=title><input name=URL><input name=YARU_retpath value=/posts_add_link.xml>';E=f.elements;if (!window.getSelection().isCollapsed){var d=document.createElement('div');d.appendChild(window.getSelection().getRangeAt(0).cloneContents());E['body'].value=d.innerHTML;}E['title'].value=D.title;E['URL'].value=D.location;f.submit();})()">Поделится ссылкой</a>
-</p>
-
-<script type="text/javascript">
-function x() {
-    var D=document;
-    var f=D.createElement('form');
-    f.action='http://my.ya.ru/request_to_session.xml';
-    f.method='post';
-    (D.documentElement||D.body).appendChild(f);
-    f.style.display='none';
-    f.innerHTML='<input name=body><input name=title><input name=URL><input name=YARU_retpath value=/posts_add_link.xml>';
-    E=f.elements;
-    if (!window.getSelection().isCollapsed){
-        var d = D.createElement('div');
-        d.appendChild(window.getSelection().getRangeAt(0).cloneContents());
-        E['body'].value=d.innerHTML;
-    }
-    E['title'].value=D.title;
-    E['URL'].value=D.location;
-    f.submit();
-}
-</script>
+<p><a id="link" href="javascript:(function(D,C,A,Q,f){f=D[C]('form');f.action='http://my.ya.ru/request_to_session.xml';f.method='post';D.documentElement[A](f);f.style.display='none';b=D[C]('div');b[A](getSelection().getRangeAt(0).cloneContents());b=b.innerHTML;I={body:b?'<'+Q+b+'</'+Q:'',title:D.title,URL:D.location,YARU_retpath:'/posts_add_link.xml'};for(e in I){E=D[C]('input');E.name=e;E.value=I[e];f[A](E)}f.submit()})(document,'createElement','appendChild','blockquote>')">Поделится ссылкой</a></p>
 <!--<![endif]-->
-
 <!-- Версия для IE -->
 <!--[if IE]>
 <p>
-<a href="javascript:(function(){var D=document;var f=D.createElement('form');f.action='http://my.ya.ru/request_to_session.xml';f.method='post';(D.documentElement||D.body).appendChild(f);f.style.display='none';f.innerHTML='<input name=body><input name=title><input name=URL><input name=YARU_retpath value=/posts_add_link.xml>';E=f.elements;E['body'].value=D.selection.createRange().htmlText;E['title'].value=D.title;E['URL'].value=D.location;f.submit();})()">Поделится ссылкой</a>
+<a href="javascript:(function(D,C,A,Q,f){f=D[C]('form');f.action='http://my.ya.ru/request_to_session.xml';f.method='post';(D.documentElement||D.body)[A](f);f.style.display='none';b=D.selection.createRange().htmlText;I={body:b?'<'+Q+b+'</'+Q:'',title:D.title,URL:D.location,YARU_retpath:'/posts_add_link.xml'};for(e in I){E=D[C]('input');E.name=e;E.value=I[e];f[A](E)}f.submit()})(document,'createElement','appendChild','blockquote>')">Поделится ссылкой</a>
 </p>
 <![endif]-->
+
+<!-- Sources:
+javascript:(function (D,C,A,Q,f) {
+f=D[C]('form');
+f.action='http://my.ya.ru/request_to_session.xml';
+f.method='post';
+f.style.display='none';
+D.documentElement[A](f);
+b=D[C]('div');b[A](getSelection().getRangeAt(0).cloneContents());b=b.innerHTML;
+//IE: (D.documentElement||D.body)[A](f);
+//IE: b=D.selection.createRange().htmlText;
+I={
+	body: b?'<'+Q+b+'</'+Q:'',
+	title: D.title,
+	URL: D.location,
+	YARU_retpath: '/posts_add_link.xml'
+};
+for (e in I) {
+	E=D[C]('input');
+	E.name = e;
+	E.value = I[e];
+	f[A](E);
+}
+f.submit();
+})(document,'createElement','appendChild','blockquote>')
+-->
 </body>
 </html>
